--- a/DrumElectronic/app/src/main/res/layout/activity_main.xml
+++ b/DrumElectronic/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="wrap_content"
     android:layout_centerVertical="true"
     tools:context="com.techkid.anh82.drumelectronic.MainActivity"
-    android:background="#FFFFFF"
+    android:background="#000000"
     >
     
     <LinearLayout
@@ -46,7 +46,6 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:id="@+id/imageView3"/>
-
         </LinearLayout>
         <LinearLayout
             android:padding="10dp"
