--- a/DrumElectronic/app/src/main/res/layout/activity_main.xml
+++ b/DrumElectronic/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" >
             <ImageView
+                android:tag="A"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -31,6 +32,7 @@
                 android:id="@+id/imageView1"
                 />
             <ImageView
+                android:tag="B"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -39,6 +41,7 @@
                 android:layout_weight="1"
                 android:id="@+id/imageView2"/>
             <ImageView
+                android:tag="C"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -53,6 +56,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" >
             <ImageView
+                android:tag="D"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -62,6 +66,7 @@
                 android:id="@+id/imageView4"
                 />
             <ImageView
+                android:tag="E"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -72,6 +77,7 @@
                 />
 
             <ImageView
+                android:tag="F"
                 android:id="@+id/imageView6"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
@@ -87,7 +93,7 @@
             android:layout_height="0dp"
             android:layout_weight="1" >
             <ImageView
-
+                android:tag="G"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -97,6 +103,7 @@
                 android:id="@+id/imageView7"
                 />
             <ImageView
+                android:tag="H"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
@@ -105,6 +112,7 @@
                 android:layout_weight="1"
                 android:id="@+id/imageView8"/>
             <ImageView
+                android:tag="J"
                 android:padding="5dp"
                 app:srcCompat="@drawable/enter"
                 android:scaleType="fitXY"
